# rosewood-aura

./: .env.example  CLAUDE.md  Ideas.md  README.md  TASKS.md  pyproject.toml
assets/: Agent_Personality.md  aris.txt  soline.txt  thatcher.txt
server/: agent_runner.py  context_store.py  main.py  setup.py  tools.py
skills/: CLAUDE.md  __init__.py  book_car.py  create_guest_agent.py  customer_research.py  guest_agent_session.py
skills/book-car/: SKILL.md
skills/book-car/scripts/: book.py
skills/create-guest-agent/: SKILL.md
skills/create-guest-agent/scripts/: create_agent.py
skills/guest-agent-session/: SKILL.md
skills/guest-agent-session/scripts/: session.py
skills/guest-research/: SKILL.md
skills/guest-research/scripts/: research.py
skills/send-calendar-invite/: SKILL.md
skills/send-calendar-invite/scripts/: send_invite.py
