[project]
name = "rosewood-aura"
version = "0.1.0"
description = "Omnichannel AI concierge for Rosewood Hotels"
requires-python = ">=3.9"
dependencies = [
    "anthropic>=0.102.0",
    "fastapi>=0.128.8",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "exa-py>=1.8.0",
    "twilio>=9.10.9",
    "uvicorn[standard]>=0.39.0",
]
